--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -147,19 +147,18 @@
   }
 
   .back-button {
-    background: none;
-    border: none;
-    color: #f0a500;
-    font-size: 1.1rem;
-    cursor: pointer;
-    margin-bottom: 10px;
     position: absolute;
     top: 20px;
     left: 20px;
+    font-size: 1rem;
+    padding: 6px 14px;
+    background-color: #d18e00;
+    color: black;
   }
   
   .back-button:hover {
-    text-decoration: underline;
+    background-color: black;
+    color: white;
   }
 
   .figures-preview {
@@ -236,6 +235,15 @@
   color: #f0a500;
 }
   
+.case-page h2.case-title,
+.case-page .case-cover,
+.case-page .open-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
   .case-title {
     font-size: 2rem;
     margin-bottom: 10px;
@@ -275,6 +283,21 @@
     margin: 20px 10px;
     object-fit: cover;
     border-radius: 8px;
+  }
+
+  .reel-arrow {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    margin-bottom: -12px;
+    z-index: 10;
+  }
+
+  .reel-arrow::after {
+    content: "⬇";
+    font-size: 2rem;
+    color: #f0a500;
+    position: relative;
   }
   
   /* Анімація */
