--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -288,16 +288,21 @@
   .reel-arrow {
     position: relative;
     width: 100%;
+    height: 0;
     text-align: center;
-    margin-bottom: -12px;
+    margin-bottom: -8px;
     z-index: 10;
+    display: flex;
+    justify-content: center;
   }
 
   .reel-arrow::after {
-    content: "⬇";
-    font-size: 2rem;
-    color: #f0a500;
-    position: relative;
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 14px solid transparent;
+    border-right: 14px solid transparent;
+    border-bottom: 18px solid #f0a500;
   }
   
   /* Анімація */
