--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -264,7 +264,7 @@
   .reel-container {
     width: 100%;
     overflow: hidden;
-    border: 3px solid #f0a500;
+    border: 3px solid #ffffff;
     border-radius: 12px;
     height: 160px;
     position: relative;
@@ -273,8 +273,10 @@
   
   .reel {
     display: flex;
+    gap: 10px;
+    will-change: transform;
     width: fit-content;
-    animation: none;
+    transition: none;
   }
   
   .reel-item {
@@ -290,7 +292,7 @@
     width: 100%;
     height: 0;
     text-align: center;
-    margin-bottom: -8px;
+    margin-bottom: 8px;
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -302,21 +304,9 @@
     height: 0;
     border-left: 14px solid transparent;
     border-right: 14px solid transparent;
-    border-bottom: 18px solid #f0a500;
-  }
-  
-  /* Анімація */
-  .rolling {
-    animation: spin 3s ease-out forwards;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-3000px);
-    }
+    border-top: 18px solid #f0a500;
+    position: relative;
+    top: 8px; /* підняли трохи вгору */
   }
   
   /* Результат */
@@ -347,4 +337,28 @@
     }
   }
   
+  .rarity {
+    font-weight: bold;
+    margin-left: 0.5rem;
+  }
+  
+  .rarity.Common {
+    color: white;
+  }
+  
+  .rarity.Exclusive {
+    color: #ff1900; /* червоний */
+  }
+  
+  .rarity.Epic {
+    color: #9f07db; /* фіолетовий */
+  }
+  
+  .rarity.Legendary {
+    color: #4cb7ff; /* голубий */
+  }
+  
+  .rarity.Grail {
+    color: gold;
+  }
   
