--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1008,3 +1008,20 @@
   align-items: center;
   z-index: 999;
 }
+
+.btn-sell-all {
+  background-color: orange;
+  color: white;
+  padding: 12px 25px;
+  border: 2px solid black;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
+}
+
+.btn-sell-all:hover {
+  background-color: white;
+  color: black;
+}
