--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1259,7 +1259,7 @@
   position: absolute;
   width: 60px;
   height: 60px;
-  transform: translate(-50%, 50%) rotate(45deg);
+  transform: translate(-50%, 50%);
   transition: bottom 0.1s linear, left 0.1s linear;
   pointer-events: none;
 }
