--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1214,9 +1214,10 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+
   aspect-ratio: 1 / 1;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  max-width: 500px;
 }
 
 .error-message {
