--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1263,7 +1263,7 @@
   position: absolute;
   width: 60px;
   height: 60px;
-  transform: translate(-50%, -50%);
+  transform: translate(0, 0);   
   will-change: transform;
   pointer-events: none;
 }
