--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1296,6 +1296,7 @@
   filter: drop-shadow(0 0 1px #bbb);
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+  animation-name: moveCloud;
   pointer-events: none;
   user-select: none;
 }
