--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -1026,6 +1026,23 @@
   color: black;
 }
 
+.btn-sort {
+  background-color: orange;
+  color: white;
+  padding: 6px 12px;
+  border: 2px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 0.95rem;
+  transition: all 0.3s ease;
+}
+
+.btn-sort:hover {
+  background-color: white;
+  color: black;
+}
+
 .figure-card {
   position: relative;
   text-align: center;
