--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -792,7 +792,6 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 10000;
-  text-align: center;
 }
 
 /* Повідомлення про успіх */
@@ -1419,4 +1418,19 @@
   align-items: center;
   gap: 16px;
   margin-top: 12px;
+}
+
+.error-message-exchange {
+  background-color: #dc3545;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 6px;
+  font-weight: bold;
+  animation: fadeInOut 2s ease-in-out forwards;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10000;
+  text-align: center;
 }
